[tool.poetry]
name = "python-swidget"
version = "1.0.1"
description = "Python API for Swidget smart devices"
license = "GPL-3.0-or-later"
authors = ["Swidget"]
repository = "https://github.com/swidget/python-swidget"
readme = "README.md"
packages = [
  { include = "swidget" }
]
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
swidget = "swidget.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.8.1"
anyio = "*"  # see https://github.com/python-trio/asyncclick/issues/18
importlib-metadata = "*"
asyncclick = ">=8"
pydantic = "^1"
ssdp = "1.1.1"

# required only for docs
sphinx = { version = "^4", optional = true }
m2r = { version = "^0", optional = true }
mistune = { version = "<2.0.0", optional = true }
sphinx_rtd_theme = { version = "^0", optional = true }
sphinxcontrib-programoutput = { version = "^0", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-cov = "^2"
pytest-asyncio = "^0"
pytest-sugar = "*"
pre-commit = "*"
voluptuous = "*"
toml = "*"
tox = "*"
pytest-mock = "^3"
codecov = "^2"
xdoctest = "^0"
coverage = {version = "^6", extras = ["toml"]}

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "m2r", "mistune", "sphinxcontrib-programoutput"]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "swidget"
known_third_party = ["asyncclick", "pytest", "setuptools", "voluptuous"]

[tool.coverage.run]
source = ["swidget"]
branch = true
omit = ["swidget/tests/*"]

[tool.coverage.report]
exclude_lines = [
  # ignore abstract methods
  "raise NotImplementedError",
  "def __repr__"
]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = true
fail-under = 100
exclude = ['swidget/tests/*']
verbose = 2

[tool.pytest.ini_options]
markers = [
    "requires_dummy: test requires dummy data to pass, skipped on real devices",
]
asyncio_mode = "auto"

[tool.doc8]
paths = ["docs"]
ignore = ["D001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
